GNOME Bugzilla – Bug 754888
glx: fix crash when inspecting onscreens
Last modified: 2015-09-11 15:45:48 UTC
A tiny NULL pointer check missing :)
Created attachment 311159 [details] [review] winsys: glx: fix crash when inspecting onscreens An unallocated onscreen might have a NULL winsys field.
Review of attachment 311159 [details] [review]: Nice catch.
Review of attachment 311159 [details] [review]: Thanks for the quick review, push to 1.22 branch.