winsys: glx: fix crash when inspecting onscreens

An unallocated onscreen might have a NULL winsys field.

https://bugzilla.gnome.org/show_bug.cgi?id=754888